// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostContent - Snapshots > matches snapshot as repost with content 1`] = `
<div
  data-post-id="repost-1"
  data-testid="post-content-base"
>
  PostContentBase 
  repost-1
</div>
`;

exports[`PostContent - Snapshots > matches snapshot as repost without content 1`] = `
<div
  data-post-id="repost-2"
  data-testid="post-content-base"
>
  PostContentBase 
  repost-2
</div>
`;

exports[`PostContent - Snapshots > matches snapshot with single-line content 1`] = `
<div
  data-post-id="post-1"
  data-testid="post-content-base"
>
  PostContentBase 
  post-1
</div>
`;
